# tstock

./: .SRCINFO  .gitignore  Dockerfile  Makefile  PKGBUILD  README.md  setup.cfg  setup.py  stc  stc.c  tc  tc.c  test  test.c  tmp  tstock  tstock.c  tstock.py  update_pypi.sh
tstock/: __init__.py  __main__.py  core.py  parse.py  settings.py
