[metadata]
name = tstock
version = 2.0.0
author = Gabe Banks
author_email = gabriel.t.banks@gmail.com
description = A command line tool to view stock charts in the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gbox4/tstock
project_urls =
    Bug Tracker = https://github.com/Gbox4/tstock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = tstock
install_requires = 
    requests
    numpy
python_requires = >=3.6

[options.entry_points]
console_scripts =
    tstock = tstock:main